--- a/index.html
+++ b/index.html
@@ -571,6 +571,11 @@
         // Project data - you can easily modify this
         const personalProjects = [
             {
+                name: "Implementing Stable Diffusion from scratch",
+                technologies: "Python, PyTorch",
+                url: "https://github.com/AnushkaGharage/stable-diffusion"
+            },
+            {
                 name: "Blog Generator",
                 technologies: "Python, Langchain, Langgraph, Pydantic, FastAPI",
                 url: "https://github.com/AnushkaGharage/blog-generator"
@@ -580,11 +585,6 @@
                 technologies: "Python, ComfyUI, Flux Redux, SAM2, Clip Vision",
                // url: "https://github.com/AnushkaGharage/movie-recommender"
             },
-         //   {
-         //       name: "GPT-2 Implementation",
-         //       technologies: "Python, TensorFlow, LSTM, Matplotlib",
-         //       url: "https://github.com/AnushkaGharage/stock-predictor"
-         //   },
             {
                 name: "Fashion Recommendation System",
                 technologies: "Python, TensorFlow, Scikit-learn, Streamlit, Resnet50",
@@ -820,5 +820,4 @@
         })();
     </script>
 </body>
-
 </html>
